--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   path_provider: ^2.1.2
+  flutter_local_notifications: ^16.3.0
+  fl_chart: ^0.66.0
 
 dev_dependencies:
   flutter_test:
