--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   hive_flutter: ^1.1.0
   path_provider: ^2.1.2
   flutter_local_notifications: ^16.3.0
+  timezone: ^0.9.4
   fl_chart: ^0.66.0
 
 dev_dependencies:
