--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,8 @@ dependencies:
   flutter_local_notifications: ^16.3.0
   timezone: ^0.9.4
   fl_chart: ^0.66.0
-  file_picker: ^6.1.1
+  file_picker: ^6.2.0
+  file_picker_web: ^5.2.5
 
 dev_dependencies:
   flutter_test:
